Salesforce/main/default/main/default/objects/Saldo_por_safra__c/Saldo_por_safra__c.object-meta.xml
<CustomObject>
    <label>Saldo por safra</label>
    <nameField>
        <label>Nombre de Saldo por safra</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Saldos por safra</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>