Salesforce/main/default/main/default/objects/Saldo_por_safra__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Saldos por safra</relationshipLabel>
    <relationshipName>Saldos_por_safra</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>