Salesforce/main/default/main/default/objects/Saldo_por_safra__c/fields/Safra__c.field-meta.xml
<CustomField>
    <fullName>Safra__c</fullName>
    <label>Safra</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>