Salesforce/main/default/main/default/objects/Saldo_por_safra__c/fields/Saldo__c.field-meta.xml
<CustomField>
    <fullName>Saldo__c</fullName>
    <label>Saldo Inicial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>