Salesforce/main/default/main/default/objects/Saldo_por_safra__c/fields/Saldo_Disponible__c.field-meta.xml
<CustomField>
    <fullName>Saldo_Disponible__c</fullName>
    <formula>Saldo__c - Saldo_Gastado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo Disponível</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>