Salesforce/main/default/main/default/objects/Saldo_por_safra__c/fields/Saldo_Gastado__c.field-meta.xml
<CustomField>
    <fullName>Saldo_Gastado__c</fullName>
    <label>Saldo Utilizado</label>
    <summarizedField>Evento_Royalty__c.Valor__c</summarizedField>
    <summaryFilterItems>
        <field>Evento_Royalty__c.Estado__c</field>
        <operation>equals</operation>
        <value>Aprobado</value>
    </summaryFilterItems>
    <summaryForeignKey>Evento_Royalty__c.Saldo_por_safra__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>